# x-IMU-CPP-API

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
apps/: language_selection.cpp  ximu_console.cpp
data/: ximu.dmp
include/ximuapi/: enumerations.h
include/ximuapi/data/: adxl_345_bus_data.h  analogue_input_data.h  cal_battery_and_thermometer_data.h  cal_inertial_and_magnetic_data.h  datetime_data.h  digital_io_data.h  digital_port_bits.h  eight_channel_data.h  four_channel_data.h  pwm_output_data.h  quaternion_data.h  raw_battery_and_thermometer_data.h  raw_inertial_and_magnetic_data.h  register_data.h  vector3.h
include/ximuapi/gl/: gl_context.h  igl_renderer.h
include/ximuapi/io/: serial_port.h
include/ximuapi/packet/: packet_construction.h  packet_deconstruction.h  packet_encoding.h
include/ximuapi/serialization/: packet_reader.h  reader_base.h  writer_base.h
include/ximuapi/utils/: fixed_float.h  math.h  utility.h
include/ximugui/widgets/: geometryengine.h  lanuageselectionwidget.h  orientationview.h  orientationview_plugin.h  serialview.h  simplewindow.h  themeselectionwidget.h  ximuwidget_iplugin_factory.h
shaders/: fshader.glsl  vshader.glsl
src/ximuapi/data/: cal_battery_and_thermometer_data.cpp  cal_inertial_and_magnetic_data.cpp  datetime_data.cpp  digital_io_data.cpp  digital_port_bits.cpp  raw_battery_and_thermometer_data.cpp  raw_inertial_and_magnetic_data.cpp  register_data.cpp
src/ximuapi/gl/: gl_context.cpp
src/ximuapi/io/: serial_port.cpp
src/ximuapi/packet/: packet_encoding.cpp
src/ximuapi/serialization/: packet_reader.cpp  reader_base.cpp  writer_base.cpp
src/ximuapi/utils/: fixed_float.cpp
src/ximugui/rc/: orientationview.qrc  serialview.qrc  themeselection.qrc
src/ximugui/widgets/: geometryengine.cpp  lanuageselectionwidget.cpp  lanuageselectionwidget.ui  orientationview.cpp  orientationview.ui  orientationview_plugin.cpp  serialview.cpp  serialview.ui  simplewindow.cpp  simplewindow.ui  themeselectionwidget.cpp  themeselectionwidget.ui
stylesheets/: coffee.qss
tests/: data_serial_writer_test.cpp  data_serialization_test.cpp  data_types_test.cpp  fixed_float_test.cpp  packet_construction_test.cpp  packet_encoding_test.cpp  qt_opengl_multi_threading_test.cpp  qt_opengl_test.cpp  qt_window_test.cpp  serial_port.cpp
translations/: en-en.qm  en-en.ts  nl-nl.qm  nl-nl.ts  pl-pl.qm  pl-pl.ts
